# vsomeip_applications

./: README.md
applications/: CMakeLists.txt
applications/src/: abs_app.cpp  vcu_app.cpp
